example/secondfile/objects/DHStatus_TestStepResultList__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Test Step Result List</relationshipLabel>
        <relationshipName>DHStatus_Test_Step_Result_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packet_Loss__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
        <label>Packet Loss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packets_Received__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
        <label>Packets Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packets_Transmitted__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
        <label>Packets Transmitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Command_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
        <label>Test Command Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Step_Outcome__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
        <label>Test Step Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Step_Reason__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-TestStepResultList</description>
        <label>Test Step Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Test Step Result List</label>
    <nameField>
        <displayFormat>TSR-{0000}</displayFormat>
        <label>DHStatus-TestStepResultList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Test Step Result List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>